--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -31,3 +31,4 @@ COPY ./start.sh /start.sh
 COPY ./pub_metrics.sh /pub_metrics.sh
 COPY ./adaptivepgbouncer.sh /adaptivepgbouncer.sh
 COPY ./routing_rules.py /home/pgbouncer/
+COPY ./rewrite_query.py /home/pgbouncer/
